# predusk-tech-assignment-rag

./: .env.example  .gitignore  Dockerfile  README.md  app.py  constants.py  main.py  pyproject.toml  requirements.txt
core/: generator.py  processor.py  retrieval.py  vector_store.py
tests/: gold_set.json
